--- a/src/main/resources/com/example/demo2/hello-view.fxml
+++ b/src/main/resources/com/example/demo2/hello-view.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -9,8 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.example.demo2.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo2.Controller">
     <children>
         <HBox prefHeight="375.0" prefWidth="650.0" spacing="20" style="-fx-padding: 15px; -fx-background-color: #f4f4f4;">
             <children>
@@ -84,7 +85,21 @@
                         </HBox>
                     </children>
                 </VBox>
-                <Canvas fx:id="waveformCanvas" height="320.0" style="-fx-border-color: #000; -fx-background-color: white;" width="280.0" />
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <HBox fx:id="recordExportBox" prefHeight="100.0" prefWidth="200.0" spacing="70.0">
+                     <children>
+                        <Button fx:id="recordButton" mnemonicParsing="false" text="Record" />
+                        <Button fx:id="exportButton" mnemonicParsing="false" text="Export" />
+                     </children>
+                     <padding>
+                        <Insets left="50.0" right="50.0" />
+                     </padding>
+                  </HBox>
+                      <Canvas fx:id="waveformCanvas" height="320.0" style="-fx-border-color: #000; -fx-background-color: white;" width="280.0" />
+                  <Slider fx:id="playSpeed" />
+               </children>
+            </VBox>
             </children>
         </HBox>
     </children>
